<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/please_select_subscription_option"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text" />

    <RadioGroup
        android:id="@+id/radiogroup_subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lnheader"
        android:layout_margin="@dimen/margin_10">


        <RadioButton
            android:id="@+id/rb_months_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="@dimen/dp8"
            android:text="12 Months"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <RadioButton
            android:id="@+id/rb_months_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="@dimen/dp8"
            android:text="3 Months"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <RadioButton
            android:id="@+id/rb_months_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:button="@drawable/checkbox_selector"
            android:paddingLeft="@dimen/dp8"
            android:text="36 Months"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_text"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_10"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/save"
            android:layout_width="@dimen/margin0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:layout_weight="0.5"
            android:background="@drawable/cornor_bg"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/save"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="@dimen/margin0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp8"
            android:layout_weight="0.5"
            android:background="@drawable/cornor_bg"
            android:gravity="center"
            android:padding="@dimen/margin_10"
            android:text="@string/cancel"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>