<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300"
        android:background="@drawable/music_dummy">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/back" />


                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/favourites"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text" />


                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-20dp"
        android:background="@drawable/top_round_bg"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/no_fav_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:gravity="center_horizontal"

                android:orientation="vertical"
                android:padding="@dimen/margin_10">

                <TextView
                    android:id="@+id/top_text"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:text="@string/no_fav_here"
                    android:textColor="@color/app_textcolor"
                    android:textSize="@dimen/dp25" />

                <TextView
                    android:id="@+id/middle_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/top_text"
                    android:layout_marginTop="@dimen/margin_20"
                    android:gravity="center_horizontal"
                    android:textColor="@color/app_textcolor"
                    android:text="@string/tap_here_fav_icon"
                    android:textSize="@dimen/margin_20" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:src="@drawable/no_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fav_list_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/top_round_bg"
                android:orientation="vertical"
                android:padding="@dimen/margin_10"
                android:visibility="gone"

                >


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

