<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_300"
        android:background="@drawable/music_dummy">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="@dimen/dp25"
                        android:layout_height="@dimen/dp25"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/back" />


                    <TextView
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_centerVertical="true"
                        android:gravity="center"
                        android:text="@string/favourites"
                        android:textColor="@color/white"
                        android:textSize="@dimen/large_text" />


                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-10dp"
        android:layout_marginBottom="@dimen/margin100"
        android:background="@drawable/top_round_bg"
        android:orientation="horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/adapter_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/margin_10"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/how_to_meditate"
                    android:textColor="@color/blue_color"
                    android:textSize="@dimen/margin_20" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/author_image"
                        android:layout_width="@dimen/margin_50"
                        android:layout_height="@dimen/margin_50"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_10"
                        android:gravity="center_vertical"
                        android:orientation="vertical">


                        <TextView
                            android:id="@+id/author_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/app_textcolor"
                            android:text="@string/jelf"
                            android:textSize="@dimen/margin_20" />


                    </LinearLayout>


                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/cardview_dark_background" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_item_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_30"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:padding="@dimen/margin_10"
                    android:text="@string/nothing_here"
                    android:textSize="@dimen/dp25" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lineSpacingExtra="0dp"
                    android:padding="@dimen/margin_10"
                    android:text="Please download some tracks"
                    android:textSize="@dimen/margin_20" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/margin_30"
                    android:src="@drawable/no_item" />

            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/bottom_song_layout"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

