<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:wheel="http://schemas.android.com/apk/res-auto"
    android:id="@+id/loading"
    android:layout_width="@dimen/alert_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/dialog_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_10">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/margin19sp"
        android:padding="@dimen/margin_10"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="ALERT" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin2"
        android:background="@color/app_color"/>

    <ImageView
        android:id="@+id/custom_image"
        android:layout_width="@dimen/margin53"
        android:layout_height="@dimen/margin53"
        android:layout_marginTop="@dimen/margin_15"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/question"
        android:visibility="gone"
        />

    <FrameLayout
        android:id="@+id/error_frame"
        android:layout_width="@dimen/margin53"
        android:layout_height="@dimen/margin53"
        android:layout_marginTop="@dimen/margin_15"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/error_circle" />

        <ImageView
            android:id="@+id/error_x"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/error_center_x" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/success_frame"
        android:layout_width="@dimen/margin53"
        android:layout_height="@dimen/margin53"
        android:layout_marginTop="@dimen/margin_15"
        android:visibility="gone">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_bow" />

        <View
            android:id="@+id/mask_right"
            android:layout_width="@dimen/margin35"
            android:layout_height="@dimen/margin80"
            android:layout_gravity="right"
            android:layout_marginTop="-13dp"
            android:background="@android:color/white" />

        <View
            android:id="@+id/mask_left"
            android:layout_width="@dimen/margin21"
            android:layout_height="@dimen/margin_60"
            android:layout_gravity="left"
            android:layout_marginLeft="-3dp"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/success_circle" />

        <com.impinge.soul.util.sweetdialog.SuccessTickView
            android:id="@+id/success_tick"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="@dimen/margin53"
        android:layout_height="@dimen/margin53"
        android:layout_marginTop="@dimen/margin_15"
        android:visibility="gone"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/warning_circle" />

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:scaleType="center"
            android:src="@drawable/warning_sigh" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/progress_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <com.impinge.soul.util.sweetdialog.ProgressWheel
            android:id="@+id/progressWheel"
            android:layout_width="@dimen/margin80"
            android:layout_height="@dimen/margin80"
            android:layout_gravity="center"
            wheel:matProg_progressIndeterminate="true" />
    </FrameLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:text=""
        android:paddingLeft="@dimen/margin_5"
        android:gravity="center"
        android:paddingRight="@dimen/margin_5"
        android:textColor="@color/black"
        android:textSize="@dimen/margin19sp" />

    <TextView
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/normal_text"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:gravity="center">

        <TextView
            android:id="@+id/cancel_button"
            style="@style/dialog_blue_button"
            android:layout_marginRight="@dimen/margin_10"
            android:background="@drawable/gray_button_background"
            android:text="@string/cancel"
            android:visibility="gone" />

        <TextView
            android:id="@+id/confirm_button"
            style="@style/dialog_red_button"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>